# opengl-project-setup

./: CMakeLists.txt  README.md  build.bat  opengl_project_new.bat  xcopy_exclusion.txt
src/: engine.h  game.h  main.c
src/engine/: CMakeLists.txt  engine.c
src/game/: CMakeLists.txt  game.c
